--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,21 +9,21 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 1
-    update: "widen"
-    automerged: true
+    widen-dependency-ranges: true
+    automerge: true
     allow:
-      - dependency-name: "dependabot"
+      - dependency-name: "dependabot-core"
         dependency-type: "all"
-        updates: "major"
+        version: ">=0.143.3"
   # Update workflow files every day
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
     open-pull-requests-limit: 1
-    update: "widen"
-    automerged: false
+    widen-dependency-ranges: true
+    automerge: false
     allow:
-      - dependency-name: "dependabot"
+      - dependency-name: "dependabot-core"
         dependency-type: "all"
-        updates: "major"
+        version: ">=0.143.3"
